# aurelius-test-fork

./: .gitignore  README.md  git-version.js  git-version.json  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/m4i-data-dictionary-io/: .env  Dockerfile  README.md  project.json  pyproject.toml
apps/m4i-data-dictionary-io/m4i_data_dictionary_io/: __init__.py  __main__.py
apps/m4i-data-dictionary-io/m4i_data_dictionary_io/example/: Data Dictionary Equipment Availability.xlsm  Data Dictionary in IoT Terms.xlsm
apps/m4i-data-dictionary-io/m4i_data_dictionary_io/functions/: __init__.py  create_from_excel.py  get_info_from_git.py  parse_json_to_atlas_entities.py  read_data_from_dictionary.py
backend/data2model/: project.json  pyproject.toml
backend/data2model/data2model/: hello.py
backend/data2model/tests/: test_hello.py
backend/m4i-atlas-post-install/: .env  Dockerfile  README.md  project.json  pyproject.toml  requirements.txt
backend/m4i-atlas-post-install/data/: atlas-dev-gov-quality.json  atlas-dev-quality.json  atlas-dev.json
backend/m4i-atlas-post-install/m4i_atlas_post_install/: __init__.py  app_search_engine_setup.py  connect_datasets_with_entities.py  documents_utils.py  download_engines.py  export_atlas.py  export_diff.py  get_all_documents.py  get_enterprise_search_key.py  index_all_documents.py  index_template.py  init_app_search_engines.py  init_atlas_types.py  propagate_quality.py  run.sh  update_gov_index.py  upload_sample_data.sh
backend/m4i-atlas-post-install/m4i_atlas_post_install/data/: atlas-dev-gov-quality.json
backend/m4i-atlas-post-install/scripts/: connect_datasets_with_entities.py  download_engines.py  export_atlas.py  get_keycloak_token.py  init_app_search_engines.py  propagate_quality.py  retrieve_elastic_search_key.py  update_gov_index.py
backend/m4i-atlas-post-install/tests/: test_documents_utils.py  test_index.py
backend/m4i-consistency-metrics/: .env  Dockerfile  README.md  project.json  pyproject.toml
backend/m4i-data2model/: .env  Dockerfile  README.md  project.json  pyproject.toml
backend/m4i-data2model/m4i_data2model/: __init__.py  data2model.py
backend/m4i-flink-jobs/: Dockerfile  main.py  project.json  pyproject.toml
backend/m4i-flink-jobs/m4i_flink_jobs/: __init__.py  flink_jobs.py  publish_state.py  synchronize_app_search.py
backend/m4i-flink-jobs/m4i_flink_jobs/jars/: manifest
backend/m4i-lineage-model/: .env  Dockerfile  README.md  conf.py  project.json  pyproject.toml
backend/m4i-lineage-model/m4i_lineage_model/: __init__.py  lineage_model.py
backend/m4i-lineage-rest-api/: .env  Dockerfile  README.md  project.json  pyproject.toml
backend/m4i-lineage-rest-api/m4i_lineage_rest_api/: __init__.py  app.py  config.py  credentials.py  logging.conf  settings.py
backend/m4i-lineage-rest-api/m4i_lineage_rest_api/functions/: parse_json_to_atlas_entities.py
backend/m4i-lineage-rest-api/m4i_lineage_rest_api/lin_api/: __init__.py  atlas_get_response_seralizer.py  atlas_put_response_seralizer.py  authorization_definition.py  get_store.py  m4i_generic_entity_serializers.py  output_filter_functions.py  restplus.py
backend/m4i-lineage-rest-api/tests/: conftest.py  test_m4i_generic_entity_serializers.py  test_settings.py
backend/m4i-publish-state/: Dockerfile  main.py  project.json  pyproject.toml
backend/m4i-publish-state/jars/: load-jars.sh
backend/m4i-publish-state/m4i_publish_state/: __init__.py  publish_state.py
backend/m4i-synchronize-app-search/: Dockerfile  main.py  project.json  pyproject.toml
backend/m4i-synchronize-app-search/m4i_synchronize_app_search/: __init__.py  synchronize_app_search.py
backend/m4i-update-gov-data-quality/: Dockerfile  main.py  project.json  pyproject.toml
backend/m4i-update-gov-data-quality/m4i_update_gov_data_quality/: __init__.py  update_gov_quality.py
backend/m4i-validate-entity/: .env  Dockerfile  README.md  project.json  pyproject.toml
backend/m4i-validate-entity/m4i_validate_entity/: __init__.py  m4i_validate_entity.py
libs/m4i-analytics/: README.md  project.json  pyproject.toml
libs/m4i-analytics/m4i_analytics/: hello.py
libs/m4i-analytics/tests/: test_hello.py
libs/m4i-atlas-core/: README.md  project.json  pyproject.toml
libs/m4i-atlas-core/m4i_atlas_core/: __init__.py
libs/m4i-atlas-core/m4i_atlas_core/api/: README.md  __init__.py
libs/m4i-atlas-core/m4i_atlas_core/config/: README.md  __init__.py  config_store.py
libs/m4i-atlas-core/m4i_atlas_core/entities/: __init__.py  meta.py
libs/m4i-atlas-core/m4i_atlas_core/functions/: __init__.py
libs/m4i-atlas-core/scripts/: config_sample.py  credentials_sample.py  load_type_defs.py
libs/m4i-backend-core/: README.md  project.json  pyproject.toml
libs/m4i-backend-core/m4i_backend_core/: config.py
libs/m4i-backend-core/m4i_backend_core/auth/: auth.py  requires_auth.py
libs/m4i-data-management/: .gitignore  README.md  config.sample.py  credentials.sample.py  project.json  pyproject.toml
libs/m4i-flink-tasks/: README.md  project.json  pyproject.toml
libs/m4i-flink-tasks/m4i_flink_tasks/: README.md  __init__.py
libs/m4i-flink-tasks/m4i_flink_tasks/model/: __init__.py  app_search_document.py  atlas_change_message_with_previous_version.py  entity_message.py  entity_version.py  gov_data_quality_document.py  kafka_notification.py  synchronize_app_search_error.py  synchronize_app_search_error_with_payload.py  validated_input.py  validated_input_with_previous_entity.py
libs/m4i-flink-tasks/m4i_flink_tasks/operations/: __init__.py
libs/m4i-flink-tasks/m4i_flink_tasks/utils/: __init__.py  retry.py
libs/m4i-governance-data-quality/: .gitignore  README.md  project.json  pyproject.toml
libs/m4i-governance-data-quality/m4i_governance_data_quality/: __init__.py
libs/m4i-governance-data-quality/m4i_governance_data_quality/gov_quality/: __init__.py
libs/m4i-metrics/: README.md  project.json  pyproject.toml
libs/m4i-metrics/m4i_metrics/: Metric.py  MetricCategory.py  __init__.py  config.py
libs/m4i-metrics/m4i_metrics/structural/: StructuralMetric.py  (+1 more)
(+2214 files in other folders)
