[tool.poetry]
name = "data2model"
version = "1.0.0"
description = "Backend for data2model"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = "UNLICENSED"
readme = "README.md"

[[tool.poetry.packages]]
include = "m4i_data2model"

[tool.poetry.dependencies]
python = "~3.8"
bokeh = "1.4.0"
numpy = "1.21.4"
pandas = "1.3.0"
xlrd = "1.2.0"
gunicorn = "^22.0.0"

[tool.poetry.dependencies.m4i-analytics]
path = "../../libs/m4i-analytics"
develop = true

[tool.poetry.dependencies.m4i-backend-core]
path = "../../libs/m4i-backend-core"
develop = true

[tool.poetry.dependencies.m4i-graphviz-layouts]
path = "../../libs/m4i-analytics-extensions/m4i-graphviz-layouts"
develop = true

[tool.ruff]
exclude = [".ruff_cache", ".svn", ".tox", ".venv", "dist"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
