[tool.poetry]
name = "m4i-flink-jobs"
version = "1.0.0"
description = "Flink jobs for Aurelius Atlas"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_flink_jobs"

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dependencies.m4i-atlas-core]
path = "../../libs/m4i-atlas-core"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
