[tool.poetry]
name = "m4i-flink-jobs"
version = "1.0.0"
description = "Flink jobs for Aurelius Atlas"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_flink_jobs"

[tool.poetry.dependencies]
python = "~3.8"
elastic-transport = "8.13.1"

[tool.poetry.dependencies.m4i-publish-state]
path = "../m4i-publish-state"
develop = true

[tool.poetry.dependencies.m4i-synchronize-app-search]
path = "../m4i-synchronize-app-search"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
