[tool.poetry]
name = "m4i-lineage-model"
version = "1.0.0"
description = "Lineage model generator for Aurelius Atlas"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_lineage_model"

[tool.poetry.dependencies]
python = "~3.8"
aiohttp = "~3.9"
flask = "1.1.1"
gunicorn = "19.7.1"
itsdangerous = "1.1.0"
jinja2 = "2.11.1"
markupsafe = "1.1.1"
pandas = "1.3.0"
werkzeug = "0.16.1"
requests = "2.26.0"

[tool.poetry.dependencies.m4i-atlas-core]
path = "../../libs/m4i-atlas-core"
develop = true

[tool.poetry.dependencies.m4i-backend-core]
path = "../../libs/m4i-backend-core"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
