[tool.poetry]
name = "m4i-synchronize-app-search"
version = "1.0.0"
description = "Synchronize App Search job for Aurelius Atlas"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_synchronize_app_search"

[tool.poetry.dependencies]
python = "~3.8"
apache-flink = "~1.17"
elasticsearch = "~8.9"
elastic-transport = "8.13.1"
python-keycloak = "0.18.0"

[tool.poetry.dependencies.m4i-flink-tasks]
path = "../../libs/m4i-flink-tasks"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
