[tool.poetry]
name = "m4i-validate-entity"
version = "1.0.0"
description = "Entity validator for Aurelius Atlas"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_validate_entity"

[tool.poetry.dependencies]
python = "~3.8"
flask = "1.1.1"

[tool.poetry.dependencies.m4i-backend-core]
path = "../../libs/m4i-backend-core"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
