[tool.poetry]
name = "m4i-analytics"
version = "1.0.0"
description = "Models4Insight Analytics Library"
authors = []
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_analytics"

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
enum-compat = "0.0.3"
future = "0.18.2"
graphviz = "0.13.2"
matplotlib = "3.1.3"
networkx = "2.4"
pandas = "1.0.0"
pydotplus = "2.0.2"
requests = "2.22.0"
requests-toolbelt = "0.9.1"
sqlalchemy = "1.3.13"
sqlparse = "0.3.0"
uuid = "1.30"
python-keycloak = "0.18.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.5"
pytest = "7.3.1"
pytest-sugar = "0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".ruff_cache", ".svn", ".tox", ".venv", "dist"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
