[tool.poetry]
name = "m4i-backend-core"
version = "1.0.0"
description = "Shared code for the M4I backend"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_backend_core"

[tool.poetry.dependencies]
python = "~3.8"
flask = "1.1.1"
python-jose = { version = "3.1.0", extras = ["pycryptodome"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
