[tool.poetry]
name = "m4i-metrics"
version = "1.0.0"
description = "Functions for calculating model consistency metrics"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_metrics"

[tool.poetry.dependencies]
python = "~3.8"
bokeh = "1.4.0"
pandas = "1.3.0"
networkx = "2.4"
numpy = "1.21.4"

[tool.poetry.dependencies.m4i-analytics]
path = "../m4i-analytics"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
